--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
 
     "airbnb-browser-shims": "^3.3.0",
-    "axios": "^0.25.0",
+    "axios": "^0.26.0",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
-    "the-new-css-reset": "^1.4.7",
+    "the-new-css-reset": "^1.4.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
+    "@babel/core": "^7.17.2",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -27,17 +27,17 @@
     "@mikey-pro/style-guide": "^4.5.0",
     "@types/koa": "^2.13.4",
     "@types/koa-static": "^4.0.2",
-    "@types/node": "^17.0.15",
+    "@types/node": "^17.0.17",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.3.0",
-    "ts-node": "^10.4.0",
+    "stylelint": "^14.5.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.68.0",
