--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Zourdough Sourdough",
   "main": "client/src/index.ts",
   "scripts": {
-    "build": "NODE_ENV=development NODE_OPTIONS=--loader=ts-node/esm webpack --mode development",
-    "dev": "NODE_ENV=development NODE_OPTIONS=--loader=ts-node/esm webpack --mode development -w",
-    "prod": "NODE_ENV=production NODE_OPTIONS=--loader=ts-node/esm webpack --mode production",
-    "start": "node --loader ts-node/esm docs/client/app.ts",
-    "test": "nodemon docs/client/app.ts"
+    "build": "NODE_ENV=development webpack --mode development",
+    "dev": "NODE_ENV=development webpack --mode development -w",
+    "prod": "NODE_ENV=production webpack --mode production",
+    "start": "ts-node client/app.ts",
+    "test": "nodemon client/app.ts"
   },
   "dependencies": {
-
     "airbnb-browser-shims": "^3.3.0",
     "axios": "^0.26.0",
     "koa": "^2.13.4",
@@ -46,19 +45,18 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chiefmikey/chalet-le-jar.git"
+    "url": "git+https://github.com/chiefmikey/zourdough.git"
   },
-  "homepage": "https://github.com/chiefmikey/chalet-le-jar#readme",
+  "homepage": "https://github.com/chiefmikey/zourdough#readme",
   "author": "Mikl Wolfe <wolfe@mikl.io> (https://mikl.io)",
   "bugs": {
-    "url": "https://github.com/chiefmikey/chalet-le-jar/issues"
+    "url": "https://github.com/chiefmikey/zourdough/issues"
   },
   "keywords": [
-    "chalet-le-jar",
-    "chaletlejar",
-    "chalet",
-    "le",
-    "jar"
+    "zourdough",
+    "sourdough",
+    "bread",
+    "starter"
   ],
   "contributors": [
     "Mikl Wolfe <wolfe@mikl.io> (https://mikl.io)"
