--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -43,6 +43,6 @@ jobs:
         pathspec_error_handling: exitImmediately
         pull: 'NO-PULL'
         push: origin HEAD:client --force
-        remove: '-r webpack.config.ts tsconfig.json README.md package.json .gitignore .github'
+        remove: '-r webpack.config.ts tsconfig.json README.md package.json .gitignore .github client'
         signoff: false
         # tag: 'v1.0.0 --force'
