--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.26.0",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "the-new-css-reset": "^1.4.9"
   },
   "devDependencies": {
@@ -27,6 +29,8 @@
     "@types/koa": "^2.13.4",
     "@types/koa-static": "^4.0.2",
     "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
