--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "build": "NODE_ENV=development webpack --mode development",
     "dev": "NODE_ENV=development webpack --mode development -w",
     "prod": "NODE_ENV=production webpack --mode production",
-    "start": "ts-node client/app.ts",
-    "test": "nodemon client/app.ts"
+    "start": "ts-node app.ts",
+    "test": "nodemon app.ts"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@koa/router": "^10.1.1",
     "airbnb-browser-shims": "^3.3.0",
     "axios": "^0.26.0",
+    "history": "^5.2.0",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,8 +30,11 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@mikey-pro/style-guide": "^4.6.0",
+    "@mikey-pro/style-guide": "^4.7.0",
     "@types/koa": "^2.13.4",
+    "@types/koa__cors": "^3.1.1",
+    "@types/koa__router": "^8.0.11",
+    "@types/koa-bodyparser": "^4.3.5",
     "@types/koa-static": "^4.0.2",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
