--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        NODE_ENV=production NODE_OPTIONS=--loader=ts-node/esm webpack --mode production
+        NODE_ENV=production webpack --mode production
         git config advice.addIgnoredFile false
 
     - name: Add and Commit
@@ -43,6 +43,6 @@ jobs:
         pathspec_error_handling: exitImmediately
         pull: 'NO-PULL'
         push: origin HEAD:client --force
-        remove: '-r webpack.config.ts tsconfig.json README.md package.json package-lock.json .gitignore .github .deepsource.toml .gitattributes client'
+        remove: '-r . !("docs")'
         signoff: false
         # tag: 'v1.0.0 --force'
