--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -43,6 +43,6 @@ jobs:
         pathspec_error_handling: exitImmediately
         pull: 'NO-PULL'
         push: origin HEAD:client --force
-        remove: '-r . !("docs")'
+        remove: '-r !("docs")'
         signoff: false
         # tag: 'v1.0.0 --force'
