--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -43,6 +43,6 @@ jobs:
         pathspec_error_handling: exitImmediately
         pull: 'NO-PULL'
         push: origin HEAD:client --force
-        remove: '-r webpack.config.ts index.d.ts tsconfig.json README.md package.json package-lock.json .gitignore .github .deepsource.toml .gitattributes client'
+        remove: '-r webpack.config.ts index.d.ts routes app.ts LICENSE tsconfig.json README.md package.json package-lock.json .gitignore .github .deepsource.toml .gitattributes client'
         signoff: false
         # tag: 'v1.0.0 --force'
