--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "test": "nodemon app.ts"
   },
   "dependencies": {
-    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.1.1",
     "airbnb-browser-shims": "^3.3.0",
     "axios": "^0.26.0",
     "history": "^5.2.0",
     "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
     "koa-send": "^5.0.1",
+    "koa-sendfile": "^3.0.0",
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
