--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "the-new-css-reset": "^1.4.9"
   },
   "devDependencies": {
