--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
+    "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "the-new-css-reset": "^1.4.9"
