--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "history": "^5.3.0",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.2.2",
     "react-cool-img": "^1.2.12",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
+    "react-simple-image-slider": "^2.4.1",
     "the-new-css-reset": "^1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -32,23 +35,23 @@
     "@types/koa": "^2.13.4",
     "@types/koa__cors": "^3.1.1",
     "@types/koa__router": "^8.0.11",
-    "@types/koa-bodyparser": "^4.3.6",
+    "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-static": "^4.0.2",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "@types/webpack": "^5.28.0",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
-    "eslint": "^8.10.0",
+    "eslint": "^8.12.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.9",
+    "prettier": "^2.6.1",
+    "sass": "^1.49.10",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.5.3",
+    "stylelint": "^14.6.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
