--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,16 +1,19 @@
-name: Dependabot auto-merge
+name: Dependabot Auto-Merge
+
 on: pull_request
 
 permissions:
   contents: write
 
 jobs:
-  dependabot-auto-merge:
+  auto-merge:
+    name: Auto-Merge
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Enable auto-merge for Dependabot PRs
-        run: gh pr merge --auto --merge "$PR_URL"
+        run: gh pr merge "$PR_URL" --auto --squash --subject "$COMMIT_MESSAGE"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GH_TOKEN: ${{ secrets.ZOURDOUGH_AUTH }}
+          COMMIT_MESSAGE: ${{ github.event.pull_request.title }}
